--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    Sample HTML body text.
+    <div id="app"></div>
   </body>
-  <script src="index.js"></script>
+  <script src="./src/index.js"></script>
 </html>
