--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="./src/index.js"></script>
+  <script src="./src/index.jsx"></script>
 </html>
